@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.91 2005/03/26 21:30:35 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.92 2005/03/29 02:56:57 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added install complete/error message boxes and a TextView for displaying
+  output.
 
   26 Mar 2005; Preston Cody <codeman@gentoo.org>
   removed /usr/local/zoneinfo from gtkfe b/c it's already being added on the BE.
